TextManipulationController should not generate a new item for content in manipulated paragraphs https://bugs.webkit.org/show_bug.cgi?id=208286

Reviewed by Wenson Hsieh.

Source/WebCore:

This patch makes TextManipulationController to ignore any content change in previously manipulated paragraphs.

Added an early exist to observeParagraphs when the observed content has an element that has already been manipulated
as an ancestor. Note that the only case in which this logic matters is when it's called by scheduleObservartionUpdate,
which calls this function on each paragraph separately, unlike startObservingParagraphs which calls it on
the entire document, we can simply exit early instead of ignoring just the current paragraph.

Renamed TextManipulationController's m_recentlyInsertedElements to m_manipulatedElements and made it persist
forever so that we can track any element that has already been manipulated. Als renamed m_mutatedElements
to m_elementsWithNewRenderer for clarity.

Test: TestWebKitAPI.TextManipulation.InsertingContentIntoAlreadyManipulatedContentDoesNotCreateTextManipulationItem

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::isInManipulatedElement): Added. Has a fast path for when
m_manipulatedElements's capacity is 0, which happens when observeParagraphs is called by startObservingParagraphs.
(WebCore::TextManipulationController::observeParagraphs): Added an early exit when there is a content that has
already been manipulated.
(WebCore::TextManipulationController::didCreateRendererForElement): Added the same check to fail early.
(WebCore::TextManipulationController::scheduleObservartionUpdate):
(WebCore::TextManipulationController::replace): Removed the code to clear m_recentlyInsertedElements.
* editing/TextManipulationController.h:

Tools:

Added a regression test.

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TextManipulation.InsertingContentIntoAlreadyManipulatedContentDoesNotCreateTextManipulationItem):


Canonical link: https://commits.webkit.org/221282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257613 268f45cc-cd09-0410-ab3c-d52691b4dbfc